--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,36 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      body {
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    font-size:30px;
+    height: 100vh;
+    color:white;
+    background-image: linear-gradient(
+      125deg, #2c3e50,#27ae60,
+      #2980b9,#e74c3c,#8e44ad
+    );
+    background-size: 400%;
+    animation: bgmove 20s infinite;
+  }
+  @keyframes bgmove{
+    0%{
+      background-position: 0% 50%;
+    }
+    50%{
+      background-position: 100% 50%;
+    }
+    100%{
+      background-position: 0% 50%;
+    }
+  }
+
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
